# elProyecto

./: .gitignore  README.md  package-lock.json
_agent05_build_out/: Api.deps.json  appsettings.json
agent-browser/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
agent01/: .env.example  .gitignore  BATCH_PROCESSING_CHANGES.md  LANGUAGE_QUICK_GUIDE.md  LICENSE  MANIFEST.in  MULTILINGUAL_ALL_RESULTS.md  MULTILINGUAL_CHANGES.md  README.md  README_v3.txt  UPGRADE_TO_V3.md  V3_SUMMARY.md  WHERE_TO_SEE_MULTILINGUAL_LOGS.md  __init__.py  openai_response.json  pyproject.toml  requirements.txt  setup.py  test_error_handling.py  transcript.md
agent01/cache/: audio1210697591.manifest.json  voice 1.manifest.json
agent01/chunks/: voice 1_part_001.m4a
agent01/chunks_json/: voice 1_part_000.json
agent01/cli/: __init__.py  main.py  rebuild_transcript.py  retranscribe_sub.py  split.py
agent01/config/: default.json  multilingual_ru_es.json  russian_only.json
agent01/core/: __init__.py  config.py  models.py
agent01/docs/: ARCHITECTURE.md  BATCH_PROCESSING.md  CHANGELOG_v2.1.md  CHANGELOG_v3.0.md  CHANGELOG_v3.1.md  ENV_TEMPLATE.md  ERROR_HANDLING.md  HUGGINGFACE_SETUP.md  MULTILINGUAL_SETUP.md  QUICK_START.md  SETUP_v3.0.md  TROUBLESHOOTING.md
agent01/examples/: basic_examples.py
agent01/infrastructure/: __init__.py  cancellation.py  merger.py  progress.py
agent01/infrastructure/audio/: __init__.py  chunker.py  diarizer.py  splitter.py  utils.py
agent01/infrastructure/cache/: __init__.py  manager.py
agent01/infrastructure/io/: __init__.py  writers.py
agent01/intermediate_results/: voice 1_chunk_000_result.json
agent01/services/: __init__.py  api_client.py  pipeline.py
agent01/tests/: __init__.py  conftest.py  test_core.py  test_infrastructure.py
agent03/: .env.example  BATCH_PROCESSING_CHANGES.md  LANGUAGE_QUICK_GUIDE.md  LICENSE  MULTILINGUAL_ALL_RESULTS.md  MULTILINGUAL_CHANGES.md  README.md  WHERE_TO_SEE_MULTILINGUAL_LOGS.md  __init__.py  pyproject.toml  requirements.txt  setup.py
agent03-trans-improver/: .gitignore  LICENSE  MANIFEST.in  QUICKSTART.txt  README.md  USAGE.md  __init__.py  env.example  pyproject.toml  requirements.txt  setup.py  transcript_fixed_2025-11-24_00-13-27.md  transcript_fixed_2025-11-24_00-20-31.md  transcript_fixed_2025-11-24_00-33-00.md
agent03-trans-improver/cli/: __init__.py  main.py
agent03-trans-improver/config/: default.json
agent03-trans-improver/core/: __init__.py  config.py  models.py
agent03-trans-improver/docs/: ARCHITECTURE.md  EXAMPLES.md  QUICK_START.md  USAGE.md
agent03-trans-improver/prompts/: README.md  custom_example.txt  default.txt  default_enhanced_from_mygpt.txt
agent03-trans-improver/services/: __init__.py  fixer.py
agent04/: Agent04.slnx  CHANGELOG.md  README.md
agent05-ui-control/: Api.slnx  CHANGELOG.md  README.md
agent06-improver-dot-net/: CHANGELOG.md  README.md  env.example
drafts/: openai_transcribe_diarize_log.py  transcribe_config.json
(+345 files in other folders)
