[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent03-trans-improver"
version = "1.0.0"
description = "Fix Cyrillic Spanish words in transcripts using GPT"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Agent03 Contributors"}
]
keywords = ["transcript", "spanish", "translation", "gpt", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "openai>=1.12.0",
]

[project.scripts]
agent03-improver = "cli.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/agent03-trans-improver"
Documentation = "https://github.com/yourusername/agent03-trans-improver/docs"

